--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "ollama",
     "openrouter",
     "httpx[socks]>=0.28.1",
+    "duckduckgo-search>=8.0.2",
 ]
 
 [project.optional-dependencies]
