--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
 ---
 
 services:
-  hf-mcp-server-mas-sequential-thinking:
-    # image: hf-mcp-server-mas-sequential-thinking:latest
+  mcpo:
+    # image: hf-mcp-mas-sequential-thinking:latest
     build: .
     ports:
       - "19110:8000"
     env_file:
       - .env
     volumes:
-      - /home/a/docker-data/MCP/hf-mcp-server-mas-sequential-thinking:/app
+      - /home/a/docker-data/MCP/hf-mcp-mas-sequential-thinking:/app
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://0.0.0.0:8000/docs || exit 1"]
