--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "pydantic-ai",
     "aiohttp",
     "async-timeout",
-    "fastapi>=0.115.12",
+    "fastapi[standard]>=0.115.12",
     "uv>=0.7.13",
     "python-dotenv>=1.1.0",
     "openai",
